# LiveASRonRPi-4

./: .gitattributes  .gitignore  CMakeLists.txt  Microphones.txt  README.md  STT_dataloader.py  TODO.md  VADmodel.hpp  audio_eval.py  checked.txt  clientMain.py  cnn.py  compile_mic_access.sh  computeMain.py  datacollection.py  dataloader.py  dataset.py  decible_test.py  double_check.py  listener.cpp  main  main.c  main.cpp  main.py  makefile  micModule.cpp  mic_access.c  mic_access.h  noisereduce_Test.py  portaudio_test.cpp  predict_test.cpp  predictions.py  process_kaggle.py  serialModule.cpp  serverMain.py  tcn.py  train.py  trainer.py  uiModule.cpp  wav2vec2Test.py  (+5 more)
.model/: WhisperDecoder.tflite  whisper-small.en.tflite  whisper-tiny.en.tflite  whisper.pt  whisper_1.pt  whisper_english.tflite  whisper_tiny_en-whisperdecoderinf.tflite  whisper_tiny_en-whisperencoderinf.tflite
.old/: kerasTensorflow.py  predictTest.cpp  wav2vec2Test.py
TCN/: calc_tcn_recp_field.py  dataset.py  devices.py  tcn.py  train.py
configs/: keywords.json
cpp_dev/: VADmodel.h  micModule.cpp
dictionary/: old_words.txt  words.txt
figures/: .placeholder
forced_alignment_test/: 19-198-0001.TextGrid  mfa_cmd.txt
include/: fft.h  keywordConfParser.h  mic_access.h  transcripter_api.h
lib/: mic_access.c
pretrained_test/: wav2vec_test.py
src/: CMakeLists.txt  config_parser.c  fft.c  json_parser  json_parser.c  keywordConfParser.c  main.c  mic_access.c  run.txt  setup.py  transcripter.c  transcripter.py
src/cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  main
supplementary/: bitfield.txt  processedWhisperCorpus.txt  word2vecTraining.py
tests/: matrix_test.py  tcpTestClient.py  tcpTestServer.py  transcript_collector_test.py
tests/dual_mic_test/: CMakeLists.txt  dual-mic-test.c
tests/mic_test/: compile.sh  test
tests/onnxrt_c_speech_detection_test/: compile.sh  onnxrt_c_speech_detection_test.c  test  test_compile.sh
tests/onnxrt_vad_gpu_test/: CMakeLists.txt  onnxrt_vad_gpu_test.c
tests/python_embed_test/: CMakeLists.txt  main.c  pythonTest.py
utils/: LARS_utils.py  ML_utils.py  TextGrid_utils.py  WhisperProcessor.py  format_dataset.py  kwHelper.py  torch_validate.py
utils/faster_whisper/: transcribe.py
